<resources>
    <string name="app_name"></string>

    <!-- Navigation Titles -->
    <string name="calendar_subheader_title">calendar</string>
    <string name="year_title">Year</string>
    <string name="month_title">Month</string>
    <string name="week_title">Week</string>
    <string name="day_title">Day</string>

    <!-- Hints -->

    <!-- Day of Week -->
    <string name="Monday">M</string>
    <string name="Tuesday">T</string>
    <string name="Wednesday">W</string>
    <string name="Thursday">T</string>
    <string name="Friday">F</string>
    <string name="Saturday">S</string>
    <string name="Sunday">S</string>




    <!-- Button Descriptions -->
    <string name="btnSettings_description">Setting</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Settings Toolbar -->
    <string name="settings_toolbar_title">Calendar Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>

